--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    background: #000;
+    color: #f1f1f1;
     font-family: sans-serif;
 }
